@@ -550,6 +550,24 @@ name|v2
 operator|.
 name|jobhistory
 operator|.
+name|JHAdminConfig
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|mapreduce
+operator|.
+name|v2
+operator|.
+name|jobhistory
+operator|.
 name|JobHistoryUtils
 import|;
 end_import
@@ -7047,6 +7065,23 @@ argument_list|(
 name|historyFile
 argument_list|)
 decl_stmt|;
+name|int
+name|jobNameLimit
+init|=
+name|getConfig
+argument_list|()
+operator|.
+name|getInt
+argument_list|(
+name|JHAdminConfig
+operator|.
+name|MR_HS_JOBNAME_LIMIT
+argument_list|,
+name|JHAdminConfig
+operator|.
+name|DEFAULT_MR_HS_JOBNAME_LIMIT
+argument_list|)
+decl_stmt|;
 name|String
 name|doneJobHistoryFileName
 init|=
@@ -7060,6 +7095,8 @@ name|mi
 operator|.
 name|getJobIndexInfo
 argument_list|()
+argument_list|,
+name|jobNameLimit
 argument_list|)
 argument_list|)
 decl_stmt|;
