@@ -949,6 +949,190 @@ expr_stmt|;
 block|}
 annotation|@
 name|Test
+DECL|method|testTrimJobName ()
+specifier|public
+name|void
+name|testTrimJobName
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|int
+name|jobNameTrimLength
+init|=
+literal|5
+decl_stmt|;
+name|JobIndexInfo
+name|info
+init|=
+operator|new
+name|JobIndexInfo
+argument_list|()
+decl_stmt|;
+name|JobID
+name|oldJobId
+init|=
+name|JobID
+operator|.
+name|forName
+argument_list|(
+name|JOB_ID
+argument_list|)
+decl_stmt|;
+name|JobId
+name|jobId
+init|=
+name|TypeConverter
+operator|.
+name|toYarn
+argument_list|(
+name|oldJobId
+argument_list|)
+decl_stmt|;
+name|info
+operator|.
+name|setJobId
+argument_list|(
+name|jobId
+argument_list|)
+expr_stmt|;
+name|info
+operator|.
+name|setSubmitTime
+argument_list|(
+name|Long
+operator|.
+name|parseLong
+argument_list|(
+name|SUBMIT_TIME
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|info
+operator|.
+name|setUser
+argument_list|(
+name|USER_NAME
+argument_list|)
+expr_stmt|;
+name|info
+operator|.
+name|setJobName
+argument_list|(
+name|JOB_NAME
+argument_list|)
+expr_stmt|;
+name|info
+operator|.
+name|setFinishTime
+argument_list|(
+name|Long
+operator|.
+name|parseLong
+argument_list|(
+name|FINISH_TIME
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|info
+operator|.
+name|setNumMaps
+argument_list|(
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|NUM_MAPS
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|info
+operator|.
+name|setNumReduces
+argument_list|(
+name|Integer
+operator|.
+name|parseInt
+argument_list|(
+name|NUM_REDUCES
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|info
+operator|.
+name|setJobStatus
+argument_list|(
+name|JOB_STATUS
+argument_list|)
+expr_stmt|;
+name|info
+operator|.
+name|setQueueName
+argument_list|(
+name|QUEUE_NAME
+argument_list|)
+expr_stmt|;
+name|info
+operator|.
+name|setJobStartTime
+argument_list|(
+name|Long
+operator|.
+name|parseLong
+argument_list|(
+name|JOB_START_TIME
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|String
+name|jobHistoryFile
+init|=
+name|FileNameIndexUtils
+operator|.
+name|getDoneFileName
+argument_list|(
+name|info
+argument_list|,
+name|jobNameTrimLength
+argument_list|)
+decl_stmt|;
+name|JobIndexInfo
+name|parsedInfo
+init|=
+name|FileNameIndexUtils
+operator|.
+name|getIndexInfo
+argument_list|(
+name|jobHistoryFile
+argument_list|)
+decl_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|"Job name did not get trimmed correctly"
+argument_list|,
+name|info
+operator|.
+name|getJobName
+argument_list|()
+operator|.
+name|substring
+argument_list|(
+literal|0
+argument_list|,
+name|jobNameTrimLength
+argument_list|)
+argument_list|,
+name|parsedInfo
+operator|.
+name|getJobName
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
 DECL|method|testUserNamePercentDecoding ()
 specifier|public
 name|void
